# codeconkeror

./: .gitignore  Cargo.toml  DESIGN.md  README.md
react-webapp/: index.html  package-lock.json  package.json  vite.config.ts
react-webapp/src/: App.tsx  DocumentManager.ts  autoInsert.ts  client.ts  diffUtils.ts  index.css  ot.ts  types.ts
react-webapp/src/components/: BranchControls.tsx  CodeEditor.tsx  DebugPanel.tsx  DocControls.tsx  EditorPane.tsx  EventLogPanel.tsx  HistoryPanel.tsx  ShadowControls.tsx  StatusBar.tsx
react-webapp/src/components/CodeEditorWithDiff/: CodeEditorWithDiff.stories.tsx  CodeEditorWithDiff.tsx  diff.ts  diffUtils.ts  styles.module.css
react-webapp/src/components/HistoryTree/: HistoryTree.stories.tsx  HistoryTree.tsx  HistoryTreeDriver.tsx  HistoryTreeNode.tsx
src/: branches.rs  encoding.rs  logtrees.rs  main.rs  patch.rs  replay.rs  serialize.rs  types.rs  web_api.rs
src/patch/: apply.rs  builder.rs  diff.rs  mod.rs  tests.rs  transform.rs
