[package]
name = "branchedit"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
futures = "0.3.32"
logtree = { path = "../logtree" }
rand = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
rand = "0.9.0"
